--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,4 +1,4 @@
-name: playwright
+name: linux
 on:
   push:
     branches:
@@ -7,7 +7,7 @@ on:
       - '*'
   pull_request:
 jobs:
-  perl-and-node:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
