--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -14,12 +14,12 @@ jobs:
       - uses: shogo82148/actions-setup-perl@v1
       - uses: actions/setup-node@v1
       - uses: microsoft/playwright-github-action@v1
+      - name: node -v
+        run: node -v
       - name: npm install
         run: npm i
       - name: perl -V
         run: perl -V
-      - name: Fix ExtUtils::MakeMaker (for Perl 5.16 and 5.18)
-        run: cpanm -n App::cpanminus ExtUtils::MakeMaker
       - name: Install dependencies
         run: cpanm -n --installdeps .
       - name: Run tests
