--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: shogo82148/actions-setup-perl@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       - uses: microsoft/playwright-github-action@v1
       - name: node -v
         run: node -v
